firefox browser scalability improvements

--- a/frontend/antibiootit/public/index.html
+++ b/frontend/antibiootit/public/index.html
@@ -10,8 +10,8 @@
 
       gtag('config', 'G-8J74FYDDWJ');
     </script>
-    <link rel="stylesheet" src="reset.css">
-    <link rel="stylesheet" src="style.css">
+    <link rel="stylesheet" type="text/html" href="/frontend/antibiootit/src/reset.css">
+    <link rel="stylesheet" type="text/html" href="/frontend/antibiootit/src/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
