--- a/frontend/antibiootit/public/index.html
+++ b/frontend/antibiootit/public/index.html
@@ -29,12 +29,8 @@
     <meta 
       name="keywords" 
       content="antibiootit, antibiootti, antibioottiannostus, laskuri, 
-        antibiottilaskuri, infektio, annostusohje, käypähoito, käypähoitosuositus, suositus, 
-        antibioottihoito, lapsen infektio, hengitystieinfektio, otiitti, välikorvantulehdus, 
-        välikorvatulehdus, korvatulehdus, nielutulehdus, nieluinfektio, angiina, streptokokkiangiina,
-        pneumonia, keuhkokuume, lapsen keuhkokuume, avohoitopneumonia, penisilliini, penisilliiniallergia,
-        käypä-hoito, käypä hoito, hoitosuositus, makrolidi, sinuiitti, poskiontelontulehdus, poskiontelotulehdus,
-        bronkiitti, keuhkoputkentulehdus, lapsen flunssa"
+        antibiottilaskuri, lasten, infektio, hoito, ohje, annostusohje, käypähoito, 
+        käypähoitosuositus, suositus"
     />
     <title>Antibiootit</title>
   </head>
