--- a/frontend/antibiootit/public/index.html
+++ b/frontend/antibiootit/public/index.html
@@ -23,7 +23,7 @@
       name="description"
       content="Antibiootit.fi tarjoaa terveysalan ammattilaisille antibioottilaskurin, 
       jolla voidaan laskea tarkat annostusohjeet lasten antibioottihoitoon. Sivusto 
-      tukee ja nopeuttaa lääkärin työtä lasten yleisimpien hengitystieinfektioiden hoidossa."
+      tukee ja nopeuttaa lääkärin työtä lasten yleisimpien infektioiden hoidossa."
     />
     <meta name="robots" content="follow, index"/>
     <meta 
