--- a/frontend/antibiootit/public/index.html
+++ b/frontend/antibiootit/public/index.html
@@ -34,7 +34,7 @@
         välikorvatulehdus, korvatulehdus, nielutulehdus, nieluinfektio, angiina, streptokokkiangiina,
         pneumonia, keuhkokuume, lapsen keuhkokuume, avohoitopneumonia, penisilliini, penisilliiniallergia,
         käypä-hoito, käypä hoito, hoitosuositus, makrolidi, sinuiitti, poskiontelontulehdus, poskiontelotulehdus,
-        bronkiitti, keuhkoputkentulehdus, lapsen flunssa"
+        bronkiitti, keuhkoputkentulehdus, lapsen flunssa, märkärupi, impetigo, perianaalidermatiitti, peppuangiina, Peräaukon streptokokki-infektio, streptokokki, Streptokokki A -infektiot, stafylokokki,"
     />
     <title>Antibiootit</title>
   </head>
