--- a/frontend/antibiootit/public/index.html
+++ b/frontend/antibiootit/public/index.html
@@ -28,11 +28,11 @@
     <meta name="robots" content="follow, index"/>
     <meta 
       name="keywords" 
-      content="antibiootit, antibiootti, antibioottiannostus, laskuri, 
+      content="antibiootit, antibiootti, lapselle, lasten lääkehoito, antibioottiannostus, laskuri, sairas lapsi, antimikrobilääke, 
         antibiottilaskuri, infektio, annostusohje, käypähoito, käypähoitosuositus, suositus, 
         antibioottihoito, lapsen infektio, hengitystieinfektio, otiitti, välikorvantulehdus, 
         välikorvatulehdus, korvatulehdus, nielutulehdus, nieluinfektio, angiina, streptokokkiangiina,
-        pneumonia, keuhkokuume, lapsen keuhkokuume, avohoitopneumonia, penisilliini, penisilliiniallergia,
+        pneumonia, keuhkokuume, lapsen keuhkokuume, avohoitopneumonia, penisilliini, penisilliiniallergia, antibioottiallergia,
         käypä-hoito, käypä hoito, hoitosuositus, makrolidi, sinuiitti, poskiontelontulehdus, poskiontelotulehdus,
         bronkiitti, keuhkoputkentulehdus, lapsen flunssa, märkärupi, impetigo, perianaalidermatiitti, peppuangiina, Peräaukon streptokokki-infektio, streptokokki, Streptokokki A -infektiot, stafylokokki,"
     />
